added style to welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -5,77 +5,88 @@
         <title>Verdian Dynamics</title>
         <!--    <link rel="stylesheet" href="css/style.css">-->
         <!--    <link href="https://s3.envato.com/files/286683174/10.png" rel="stylesheet">-->
-        <style>
-            body {
-                /*font-family: Papyrus;*/
-                /*background-color: lightblue;*/
-                /*background-image: url("https://s3.envato.com/files/286683174/08.png");*/
-                /*background-color: lightsteelblue;*/
-                background-size: 100% 100%;
-                /*background-repeat: repeat-x;*/
-            }
-            h1 {
-                color: black;
-                text-decoration: none;
-                /*text-align: center;*/
+        <link rel="stylesheet" href="css/style.css">
+<!--        <style>-->
+<!--            body {-->
+<!--                /*font-family: Papyrus;*/-->
+<!--                /*background-color: lightblue;*/-->
+<!--                /*background-image: url("https://s3.envato.com/files/286683174/08.png");*/-->
+<!--                /*background-color: lightsteelblue;*/-->
+<!--                background-size: 100% 100%;-->
+<!--                /*background-repeat: repeat-x;*/-->
+<!--            }-->
 
-            }
-            h2 {
-                color: black;
-                /*text-decoration: underline;*/
-            }
-            ol {
-                list-style: -moz-ethiopic-numeric;
-            }
-            ul {
-                list-style: circle;
-            }
-            table {
-                padding: 20px;
-                font-size: 25px;
-                font-style: bold;
+<!--            .fancy-header {-->
+<!--                color: blue; /* single line comment */-->
+<!--                text-decoration: underline;-->
+<!--            }-->
 
-            }
+<!--            h1 {-->
+<!--                color: black;-->
+<!--                text-decoration: none;-->
+<!--                /*text-align: center;*/-->
 
-            p {
-                font-size: 24px;
-            }
-            #table>tr {
-                font: bold;
-            }
-            /* unvisited link (:link) */
-            a:link {
-                color:red;
-            }
+<!--            }-->
+<!--            h2 {-->
+<!--                color: black;-->
+<!--                /*text-decoration: underline;*/-->
+<!--            }-->
+<!--            ol {-->
+<!--                list-style: square;-->
+<!--            }-->
+<!--            ul {-->
+<!--                list-style: circle;-->
+<!--            }-->
+<!--            table {-->
+<!--                padding: 20px;-->
+<!--                font-size: 25px;-->
+<!--                font-style: bold;-->
 
-            /* visited link (:visited) */
-            a:visited {
-                color:black;
-            }
+<!--            }-->
 
-            /* mouse hover over link (:hover) */
-            a:hover {
-                color:violet;
-            }
+<!--            p {-->
+<!--                font-size: 24px;-->
+<!--            }-->
+<!--            #table>tr {-->
+<!--                font: bold;-->
+<!--            }-->
+<!--            /* unvisited link (:link) */-->
+<!--            a:link {-->
+<!--                color:red;-->
+<!--            }-->
 
-            /* active/selected link (:active) */
-            a:active {
-                color:red;
-            }
+<!--            /* visited link (:visited) */-->
+<!--            a:visited {-->
+<!--                color:black;-->
+<!--            }-->
 
-            .image-section {
-                width: 45%;
-                height: 45%;
+<!--            /* mouse hover over link (:hover) */-->
+<!--            a:hover {-->
+<!--                color:violet;-->
+<!--            }-->
 
-            }
-        </style>
+<!--            /* active/selected link (:active) */-->
+<!--            a:active {-->
+<!--                color:red;-->
+<!--            }-->
+
+<!--            .image-section {-->
+<!--                width: 45%;-->
+<!--                height: 45%;-->
+
+<!--            }-->
+
+<!--            h2 {-->
+<!--                color: red;-->
+<!--            }-->
+<!--        </style>-->
 
         <!--    <h1 style="color:red</h1>-->
 
     </head>
     <body>
     <a name="top"></a>
-    <h1>Welcome to Veridian Dynamics</h1>
+    <h1 class="fancy-header">Welcome to Veridian Dynamics</h1>
     <p>At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <em><strong>technology</strong>.</em></p>
     <hr>
     <section>
