ready to present my welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <h2>Our Product</h2>
-                <table>
+                <table class="table">
                     <tr>
                         <th>Plan</th>
                         <th>Price</th>
@@ -145,7 +145,8 @@
                 </table>
                 <p><em>All products come with our quality guarantee &trade;.</em></p>
         </section>
-        <a href="#top">Go to top of page</a>
+        <p><a href="#top">Go to top of page</a></p>
+
 
 <!--        Open up your welcome.html file from earlier.-->
 <!--        Center the main heading-->
@@ -155,6 +156,7 @@
 <!--            sizing of this background image.-->
 <!--        Add a style to change the list-style to something other than the default bullet.-->
 <!--        Add a style to change the font for the entire page. Use google fonts if you would like.-->
+
 <!--        Add a style to change the table, table cells td and rows tr padding and font sizes.-->
 <!--        Add a style to alter the anchor tags and its different states. (e.g. link, visited, hover and active).-->
 <!--        Continue experimenting with styles to increase the visual appeal of the page.-->
