--- a/messages.html
+++ b/messages.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="css/messages.css">
 </head>
 <body>
-    <div class="message message-info">
-        An informational message
-    </div>
-    <div class="message message-success">
-        A success message
-    </div>
-    <div class="message message-warning">
-        A warning message
-    </div>
-    <div class="message message-error">
-        An error message
-    </div>
-
+    <section class ="container">
+        <div class="message message-info">
+            An informational message
+        </div>
+        <div class="message message-success">
+            A success message
+        </div>
+        <div class="message message-warning">
+            A warning message
+        </div>
+        <div class="message message-error">
+            An error message
+        </div>
+    </section>
 </body>
 </html>
