completed my morning push up

--- a/morningPushUp.html
+++ b/morningPushUp.html
@@ -14,50 +14,13 @@
 
             (function () {
                 "use strict";
-            /*
-            Create a function, returnUserFirstLetters, that takes in array of user objects and
-            returns a string of the first letters in lowercase of all the user firstName
-            property values.
-            */
-            /*
-                    Example:
-            */
 
-            var users = [
-              {
-                age: 24,
-                firstName: 'John'
-              },
-              {
-                age: 43,
-                firstName: 'Cathy'
-              },
-              {
-                age: 65,
-                firstName: 'Bob'
-              }
-            ];
-
-            // returnUserFirstLetters(users) // returns the value "jcb"
-            function returnUserFirstLetters (userArray) {
-                let output= '';
-                for(let i = 0; i < userArray.length; i++) {
-                    output += userArray[i].firstName.charAt(0).toLowerCase()
-                }
-                return output;
-            };
-
-                console.log(returnUserFirstLetters(users));
-
-                var car = {};
-                car.make = "Toyota";
-                car.model = "Camry";
-
-                // use array notation to access "make" property
-                // console.log("The car make is: " + car["make"]);
-
-                // use dot notation to access "model" property
-                // console.log("The car model is: " + car.model);
+                function evenlyDivisible(x, y) {
+                    if(isNaN(x) || isNaN(y) || typeof (x+y !== "number") {
+                    return (false);
+                } esle {
+                    return x % y === 0;
+                };
 
             }) ();
     </script>
