--- a/t-block-resume.html
+++ b/t-block-resume.html
@@ -1,139 +1,137 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Bootstrap Grid Resume</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Bootstrap Grid Resume</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Your custom css styles go here -->
-    <style>
-        #name-row {
-            background-color: white;
-        }
+        <!-- Your custom css styles go here -->
+        <style>
+            #name-row {
+                background-color: white;
+            }
 
-        #title-row {
-            background-color: white;
-        }
+            #title-row {
+                background-color: white;
+            }
 
-        #left-side {
-            background-color: white;
-        }
+            #left-side {
+                background-color: white;
+            }
 
-        #right-side {
-            background-color: white;
-        }
+            #right-side {
+                background-color: white;
+            }
 
-        hr {
-            background-color: red;
-        }
+            hr {
+                background-color: red;
+            }
 
-        .section-heading {
-            color: blue;
-            font-weight: bold;
-            font-size: 1em;
-        }
-        ul li {
-            list-style-type: disc;
-        }
+            .section-heading {
+                color: blue;
+                font-weight: bold;
+                font-size: 1em;
+            }
+            ul li {
+                list-style-type: disc;
+            }
 
-        ol li {
-            list-style-type: circle;
-        }
-        h1 {
-            font-family: cursive;
-        }
+            ol li {
+                list-style-type: circle;
+            }
+            h1 {
+                font-family: Aerial;
+            }
 
-        /* Large rounded green border */
-        hr.new5 {
-            border: 3px solid green;
-            border-radius: 5px;
-        }
+            /* Large rounded green border */
+            hr.new5 {
+                border: 3px solid green;
+                border-radius: 5px;
+            }
+        </style>
+    </head>
+    <body>
+        <!-- Main Content Starts Here  -->
+        <div class="container">
+            <div class="row" id="name-row">
+                <div class="col-12 text-center">
+                    <h1>Javier P. Estrada</h1>
+                </div>
+            </div>
 
-    </style>
-</head>
-<body>
+            <div class="row text-center" id="title-row">
+                <div class="col-12">
+                    <h4>Full Stack Developer</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Aliquam amet aspernatur dolor dolore laudantium. Accusantium,
+                        blanditiis cupiditate deserunt, eaque error et ex explicabo
+                        harum inventore ipsam odio possimus recusandae reprehenderit?
+                    </p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 fa fa-phone ">1(210)444-4444</div>
+                <div class="col-12 col-md-6 col-lg-3 fa fa-envelope">cody-the-duck@codeup.com</div>
+                <div class="col-12 col-md-6 col-lg-3 fa fa-linkedin">@cody-the-duck</div>
+                <div class="col-12 col-md-6 col-lg-3 fa fa-github">@cody-the-duck</div>
+            </div>
+            <hr class="new5">
+            <div class="row">
+                <div class="col-12 col-md-4" id="left-side">
+                    <!-- left side content -->
+                    <section>
+                        <h5 class="section-heading">SKILLS & ABILITIES</h5>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <ol>
+                                <li>Flexbox</li>
+                                <li>Bootstrap</li>
 
-<!-- Main page content -->
-<div class="container">
-    <div class="row" id="name-row">
-        <div class="col-12 text-center">
-            <h1>Javier P. Estrada</h1>
+                            </ol>
+                            <li>JavaScript</li>
+
+                        </ul>
+                    </section>
+                    <section>
+                        <h5 class="section-heading">ACADEMIC</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam at autem consequatur, incidunt ipsum iure iusto, minima nemo officiis omnis porro, quam qui quia quidem sint sit vel voluptate!
+                        </p>
+                    </section>
+                    <section>
+                        <h5 class="section-heading">PROFESSIONAL EXPERIENCE</h5>
+                        <p>Job 1</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque blanditiis eos fuga in mollitia possimus quia quo unde vero. Accusamus assumenda consequuntur dolorum enim esse eum optio reprehenderit vitae!</p>
+                        <p>Job 2</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda deserunt dignissimos doloremque excepturi explicabo iste magni minima molestias nesciunt optio placeat quos repellendus reprehenderit, saepe unde voluptatem voluptatum!</p>
+                    </section>
+                </div>
+                <div class="col-12 col-md-8" id="right-side" id="right-side">
+                    <!-- Right side content -->
+                    <section>
+                        <h5 class="section-heading">DEVELOPMENT PROJECTS</h5>
+                        <p>PROJECT 1</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aut esse ex, illo inventore ipsum quo temporibus vitae voluptatem? Autem dolorum ea est expedita odit omnis repudiandae sit voluptas voluptates!</p>
+                        <p>PROJECT 2</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur atque commodi cum ea earum et explicabo illo, incidunt maxime nam nostrum quaerat reprehenderit saepe, soluta ut veritatis. Soluta, tenetur.</p>
+                    </section>
+                    <section>
+                        <h5 class="section-heading">AWARDS & INVOLVEMENT</h5>
+                        <p>AWARD 1</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur facilis, minima! Aliquam culpa cumque, ducimus eius ex facere laboriosam maxime nihil nisi officia optio praesentium reprehenderit rerum, sequi suscipit vitae?</p>
+                        <p>INVOLVEMENT 1</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut commodi debitis eaque excepturi, fuga hic id impedit minima modi molestias nulla, omnis provident quaerat quibusdam quod saepe sequi unde!</p>
+                    </section>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="row text-center" id="title-row">
-        <div class="col-12">
-            <h4>Full Stack Developer</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Aliquam amet aspernatur dolor dolore laudantium. Accusantium,
-                blanditiis cupiditate deserunt, eaque error et ex explicabo
-                harum inventore ipsam odio possimus recusandae reprehenderit?
-            </p>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3 fa fa-phone ">1(210)444-4444</div>
-        <div class="col-12 col-md-6 col-lg-3 fa fa-envelope">cody-the-duck@codeup.com</div>
-        <div class="col-12 col-md-6 col-lg-3 fa fa-linkedin">@cody-the-duck</div>
-        <div class="col-12 col-md-6 col-lg-3 fa fa-github">@cody-the-duck</div>
-    </div>
-    <hr class="new5">
-    <div class="row">
-        <div class="col-12 col-md-4" id="left-side">
-            <!-- left side content -->
-            <section>
-                <h6 class="section-heading">SKILLS & ABILITIES</h6>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <ol>
-                        <li>Flexbox</li>
-                        <li>Bootstrap</li>
-
-                    </ol>
-                    <li>JavaScript</li>
-
-                </ul>
-            </section>
-            <section>
-                <h6 class="section-heading">ACADEMIC</h6>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam at autem consequatur, incidunt ipsum iure iusto, minima nemo officiis omnis porro, quam qui quia quidem sint sit vel voluptate!
-                </p>
-            </section>
-            <section>
-                <h6 class="section-heading">PROFESSIONAL EXPERIENCE</h6>
-                <p>Job 1</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque blanditiis eos fuga in mollitia possimus quia quo unde vero. Accusamus assumenda consequuntur dolorum enim esse eum optio reprehenderit vitae!</p>
-                <p>Job 2</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda deserunt dignissimos doloremque excepturi explicabo iste magni minima molestias nesciunt optio placeat quos repellendus reprehenderit, saepe unde voluptatem voluptatum!</p>
-            </section>
-        </div>
-        <div class="col-12 col-md-8" id="right-side" id="right-side">
-            <!-- Right side content -->
-            <section>
-                <h6 class="section-heading">DEVELOPMENT PROJECTS</h6>
-                <p>PROJECT 1</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aut esse ex, illo inventore ipsum quo temporibus vitae voluptatem? Autem dolorum ea est expedita odit omnis repudiandae sit voluptas voluptates!</p>
-                <p>PROJECT 2</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur atque commodi cum ea earum et explicabo illo, incidunt maxime nam nostrum quaerat reprehenderit saepe, soluta ut veritatis. Soluta, tenetur.</p>
-            </section>
-            <section>
-                <h6 class="section-heading">AWARDS & INVOLVEMENT</h6>
-                <p>AWARD 1</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur facilis, minima! Aliquam culpa cumque, ducimus eius ex facere laboriosam maxime nihil nisi officia optio praesentium reprehenderit rerum, sequi suscipit vitae?</p>
-                <p>INVOLVEMENT 1</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut commodi debitis eaque excepturi, fuga hic id impedit minima modi molestias nulla, omnis provident quaerat quibusdam quod saepe sequi unde!</p>
-            </section>
-        </div>
-    </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-<!-- Your custom JS goes here -->
-</body>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+        <!-- Your custom JS goes here -->
+    </body>
 </html>
