almost done with my resume

--- a/t-block-resume.html
+++ b/t-block-resume.html
@@ -10,6 +10,9 @@
 
         <!-- Your custom css styles go here -->
         <style>
+            :root {
+
+            }
             #name-row {
                 background-color: white;
             }
@@ -66,7 +69,7 @@
                 <div class="col-12">
                     <h4>Full Stack Developer</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Lorem ipsum dolor sit amet Javier, consectetur adipisicing elit, duhhh!.
                         Aliquam amet aspernatur dolor dolore laudantium. Accusantium,
                         blanditiis cupiditate deserunt, eaque error et ex explicabo
                         harum inventore ipsam odio possimus recusandae reprehenderit?
@@ -79,7 +82,7 @@
             </div>
             <hr class="new5">
             <div class="row">
-                <div class="col-12 col-md-4" id="left-side">
+                <div class="col-12 col-md-12" id="left-side">
                     <!-- left side content -->
                     <section>
                         <h5 class="section-heading">SKILLS & ABILITIES</h5>
@@ -109,7 +112,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda deserunt dignissimos doloremque excepturi explicabo iste magni minima molestias nesciunt optio placeat quos repellendus reprehenderit, saepe unde voluptatem voluptatum!</p>
                     </section>
                 </div>
-                <div class="col-12 col-md-8" id="right-side" id="right-side">
+                <div class="col-12 col-md-8" id="right-side">
                     <!-- Right side content -->
                     <section>
                         <h5 class="section-heading">DEVELOPMENT PROJECTS</h5>
