--- a/MyExtraWork/gridSytemII.html
+++ b/MyExtraWork/gridSytemII.html
@@ -1,250 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+              integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+        <title>Title</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <title>Title</title>
+    <!--    <link rel="stylesheet" href="css/stylesheet.css">-->
+        <style>
+            * {
 
-<!--    <link rel="stylesheet" href="css/stylesheet.css">-->
-    <style>
-        * {
-
-            font-family: 'Anton', 'Abel', sans-serif;
-            background: #E6E6E6;
-        }
-
-
-        #toplogo1 {
-            display: flex;
-            /*align-content: center;*/
-            /*justify-content: center;*/
-            justify-content: center;
-        }
-
-        #toplogo {
-            display: flex;
-            justify-content: center;
-        }
-
-        .midspace {
-            height: 50px;
-        }
-
-        #codeupdesign {
-            display: flex;
-            margin: 0;
-            justify-content: center;
-            font-family: Able;
-        }
+                font-family: 'Anton', 'Abel', sans-serif;
+                background: #E6E6E6;
+            }
 
 
-        .card-body {
-            display: flex;
-            /*border: none;*/
-            justify-content: center;
-        }
+            #toplogo1 {
+                display: flex;
+                /*align-content: center;*/
+                /*justify-content: center;*/
+                justify-content: center;
+                margin-bottom: ;
+            }
 
-        .heading1 h1{
-            display: flex;
-            margin: auto;
-            justify-content: center;
-            height: 64px;
-            font-weight: bolder;
-            font-family: Anton;
-        }
+            #toplogo {
+                display: flex;
+                justify-content: center;
+            }
 
-        .heading2 {
-            display: flex;
-            justify-content: center;
+            /*.midspace {*/
+            /*    height: 50px;*/
+            /*}*/
 
-        }
-
-        .dot1 {
-            background-color: #E6563B;
-            height: 18px;
-            width: 18px;
-            border-radius: 50%;
-            display: inline-block;
-            text-align: center;
-            line-height: 18px;
+            #codeupdesign {
+                display: flex;
+                margin: none;
+                padding: 60px;
+                justify-content: center;
+                /*border: #E6563B 4px solid;*/
+                font-size: 100px;
+                font-family: Able;
+                /*background-color: rgb(230, 230, 230);*/
+            }
 
 
+            .card-body {
+                display: flex;
+                /*border: none;*/
+                justify-content: center;
+            }
 
-        }
-        .dot2 {
-            background-color: #EB9D3A;
-            height: 18px;
-            width: 18px;
-            border-radius: 50%;
-            display: inline-block;
-            text-align: center;
-            line-height: 18px;
-        }
-        .dot3 {
-            background-color: #7CB06C;
-            height: 18px;
-            width: 18px;
-            border-radius: 50%;
-            display: inline-block;
-            text-align: center;
-            line-height: 18px;
-        }
-        .dot4 {
-            background-color: #00ABA9;
-            height: 18px;
-            width: 18px;
-            border-radius: 50%;
-            display: inline-block;
-            text-align: center;
-            line-height: 18px;
-        }
+            .heading1 h1{
+                display: flex;
+                margin-top: auto;
+                justify-content: center;
+                font-size: 64px;
+                font-family: Anton;
+            }
 
-        .design {
-            width: 300px;
-            height: 300px;
-            line-height: 255px;
-            border-radius: 50%;
-            font-size: 50px;
-            color: #fff;
-            text-align: center;
-            background-color: #E6563B;
-            display: inline-block;
-            border: 20px solid white;
-        }
-        .develop {
-            width: 300px;
-            height: 300px;
-            line-height: 255px;
-            border-radius: 50%;
-            font-size: 50px;
-            color: #fff;
-            text-align: center;
-            background: #DEA03D;
-            display: inline-block;
-            border: 20px solid white;
-        }
-        .support {
-            width: 300px;
-            height: 300px;
-            line-height: 255px;
-            border-radius: 50%;
-            font-size: 50px;
-            color: #fff;
-            text-align: center;
-            background: #7CB06C;
-            display: inline-block;
-            border: 20px solid white;
-        }
-        .host {
-            width: 300px;
-            height: 300px;
-            line-height: 255px;
-            border-radius: 50%;
-            font-size: 50px;
-            color: #fff;
-            text-align: center;
-            background: #00ABA9;
-            display: inline-block;
-            border: 20px solid white;
-        }
+            .heading2 {
+                display: flex;
+                justify-content: center;
 
-        #midgrid {
-            display: inline-block;
-            justify-content: space-around;
-            /*border-color: white;*/
-            /*border: 10px solid white;*/
+            }
 
-        }
-
-
-        #selectedwork {
-            display: flex;
-            justify-content: center;
-            /*padding: 50px;*/
-
-        }
-
-        .flex-container1 {
-            display: flex;
-            justify-content: space-evenly;
-            /*width: 80%*/
-        }
+            .dot1 {
+                background-color: #E6563B;
+                height: 18px;
+                width: 18px;
+                border-radius: 50%;
+                display: inline-block;
+                text-align: center;
+                line-height: 18px;
 
 
 
-    </style>
-</head>
-<body>
-<!--    <div class="container">-->
+            }
+            .dot2 {
+                background-color: #EB9D3A;
+                height: 18px;
+                width: 18px;
+                border-radius: 50%;
+                display: inline-block;
+                text-align: center;
+                line-height: 18px;
+            }
+            .dot3 {
+                background-color: #7CB06C;
+                height: 18px;
+                width: 18px;
+                border-radius: 50%;
+                display: inline-block;
+                text-align: center;
+                line-height: 18px;
+            }
+            .dot4 {
+                background-color: #00ABA9;
+                height: 18px;
+                width: 18px;
+                border-radius: 50%;
+                display: inline-block;
+                text-align: center;
+                line-height: 18px;
+            }
 
-<div id="toplogo1"><img src="img/logo.png" id="toplogo">
-</div>
+            .design {
+                width: 300px;
+                height: 300px;
+                line-height: 255px;
+                border-radius: 50%;
+                font-size: 50px;
+                color: #fff;
+                text-align: center;
+                background-color: #E6563B;
+                display: inline-block;
+                border: 20px solid white;
+            }
+            .develop {
+                width: 300px;
+                height: 300px;
+                line-height: 255px;
+                border-radius: 50%;
+                font-size: 50px;
+                color: #fff;
+                text-align: center;
+                background: #DEA03D;
+                display: inline-block;
+                border: 20px solid white;
+            }
+            .support {
+                width: 300px;
+                height: 300px;
+                line-height: 255px;
+                border-radius: 50%;
+                font-size: 50px;
+                color: #fff;
+                text-align: center;
+                background: #7CB06C;
+                display: inline-block;
+                border: 20px solid white;
+            }
+            .host {
+                width: 300px;
+                height: 300px;
+                line-height: 255px;
+                border-radius: 50%;
+                font-size: 50px;
+                color: #fff;
+                text-align: center;
+                background: #00ABA9;
+                display: inline-block;
+                border: 20px solid white;
+            }
 
-<!--<div class="midspace"></div>-->
+            #midgrid {
+                display: inline-block;
+                justify-content: space-around;
+                /*border-color: white;*/
+                /*border: 10px solid white;*/
 
-<h1 id="codeupdesign">codeup design</h1>
-
-<div class="flex-container1">
-    <div class="flex-item">SERVICES</div>
-    <div class="flex-item">WORK</div>
-    <div class="flex-item">BLOG</div>
-    <div class="flex-item">CONTACT</div>
-</div>
-
-<div class="heading1">
-    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-</div>
+            }
 
 
+            #selectedwork {
+                display: flex;
+                justify-content: center;
+                /*padding: 50px;*/
 
-<div class="heading2">
-    <h2>FROM PARK CITY, UTAH</h2>
-</div>
+            }
+
+            .flex-container1 {
+                display: flex;
+                font-family: Anton;
+                justify-content: space-evenly;
+                font-size: 32px;
+                padding-top: 50px;
+                padding-bottom: 50px;
+            }
 
 
-<div class="col-sm-12" id="midgrid">
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="design">Design</div>
+
+        </style>
+    </head>
+    <body>
+        <!--    <div class="container">-->
+
+        <div id="toplogo1"><img src="img/logo.png" id="toplogo">
         </div>
-        <div class="col-sm-6">
-            <div class="develop">Develop</div>
+
+        <!--<div class="midspace"></div>-->
+
+        <h1 id="codeupdesign">codeup design</h1>
+
+        <div class="flex-container1">
+            <div class="flex-item">SERVICES</div>
+            <div class="flex-item">WORK</div>
+            <div class="flex-item">BLOG</div>
+            <div class="flex-item">CONTACT</div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="support">Support</div>
+
+        <div class="heading1">
+            <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
         </div>
-        <div class="col-sm-6">
-            <div class="host">Host</div>
+
+
+
+        <div class="heading2">
+            <h2>FROM PARK CITY, UTAH</h2>
         </div>
-    </div>
 
 
-    <h5 id="selectedwork">Selected Work</h5>
+        <div class="col-sm-12" id="midgrid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="design">Design</div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="develop">Develop</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="support">Support</div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="host">Host</div>
+                </div>
+            </div>
 
 
-    <div class="card" id="apple" style="width: 18rem;">
-        <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <p class="card-text">FEATURED PROJECT</p>
-            <span class="dot1">D</span>
-            <span class="dot2">D</span>
-            <span class="dot3">S</span>
-            <span class="dot4">H</span>
+            <h5 id="selectedwork">Selected Work</h5>
+
+
+            <div class="card" id="apple" style="width: 18rem;">
+                <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">FEATURED PROJECT</p>
+                    <span class="dot1">D</span>
+                    <span class="dot2">D</span>
+                    <span class="dot3">S</span>
+                    <span class="dot4">H</span>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
+    </body>
 </html>
