completed morning pushup

--- a/morning_push_ups.html
+++ b/morning_push_ups.html
@@ -22,9 +22,10 @@
         console.log(seven());
 
         // morning warm ups #2
+        let y = [];
         function functionName(x) {
-
-            return (x);
+            let y = x;
+            return ((y[0]) ,(y.length));
         };
 
         // morning warm ups #3
