ginished jquery exercises

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -34,15 +34,15 @@
             (function() {
                 "use strict";
                 // TODO: Uncomment next line and get the main header element by id
-                   let mainHeader = document.getElementById('main-header');
+                //    let mainHeader = document.getElementById('main-header');
 
 
                 // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-                  mainHeader.innerHTML = "JavaScript is Cool!";
+                //   mainHeader.innerHTML = "JavaScript is Cool!";
 
 
                 // TODO: Uncomment the next line and get the sub header element by id
-                     var subHeader = document.getElementById('sub-header');
+                //      var subHeader = document.getElementById('sub-header');
 
 
                 // TODO: Set the text color of subHeader to blue
@@ -92,17 +92,17 @@
                 // create the 4 buttons first in the html...duhhh javier!!!//
                 // add event listener to btn# to four buttons //
 
-                    var btn1 = document.getElementById('btn1');
-                    btn1.addEventListener('click', remover);
-
-                    var btn2 = document.getElementById('btn2');
-                    btn2.addEventListener('click', remover);
-
-                    var btn3 = document.getElementById('btn3');
-                    btn3.addEventListener('click', remover);
-
-                    var btn4 = document.getElementById('btn4');
-                    btn4.addEventListener('click', remover);
+                            // var btn1 = document.getElementById('btn1');
+                            // btn1.addEventListener('click', remover);
+                            //
+                            // var btn2 = document.getElementById('btn2');
+                            // btn2.addEventListener('click', remover);
+                            //
+                            // var btn3 = document.getElementById('btn3');
+                            // btn3.addEventListener('click', remover);
+                            //
+                            // var btn4 = document.getElementById('btn4');
+                            // btn4.addEventListener('click', remover);
 
                 // For example, the first button should set inner html of mainHeader to "JavaScript is Cool".
 
