--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -46,7 +46,7 @@
 
 
                 // TODO: Set the text color of subHeader to blue
-                   subHeader.style.color = "blue";
+                //    subHeader.style.color = "blue";
 
 
                 // TODO: Uncomment the next line and get all list items
