adding my konami js

--- a/MyExtraWork/gridSytemII.html
+++ b/MyExtraWork/gridSytemII.html
@@ -9,195 +9,32 @@
         <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Title</title>
 
-    <!--    <link rel="stylesheet" href="css/stylesheet.css">-->
-        <style>
-            * {
-
-                font-family: 'Anton', 'Abel', sans-serif;
-                background: #E6E6E6;
-            }
-
-
-            #toplogo1 {
-                display: flex;
-                /*align-content: center;*/
-                /*justify-content: center;*/
-                justify-content: center;
-                margin-bottom: ;
-            }
-
-            #toplogo {
-                display: flex;
-                justify-content: center;
-            }
-
-            /*.midspace {*/
-            /*    height: 50px;*/
-            /*}*/
-
-            #codeupdesign {
-                display: flex;
-                margin: none;
-                padding: 60px;
-                justify-content: center;
-                /*border: #E6563B 4px solid;*/
-                font-size: 100px;
-                font-family: Able;
-                /*background-color: rgb(230, 230, 230);*/
-            }
-
-
-            .card-body {
-                display: flex;
-                /*border: none;*/
-                justify-content: center;
-            }
-
-            .heading1 h1{
-                display: flex;
-                margin-top: auto;
-                justify-content: center;
-                font-size: 64px;
-                font-family: Anton;
-            }
-
-            .heading2 {
-                display: flex;
-                justify-content: center;
-
-            }
-
-            .dot1 {
-                background-color: #E6563B;
-                height: 18px;
-                width: 18px;
-                border-radius: 50%;
-                display: inline-block;
-                text-align: center;
-                line-height: 18px;
-
-
-
-            }
-            .dot2 {
-                background-color: #EB9D3A;
-                height: 18px;
-                width: 18px;
-                border-radius: 50%;
-                display: inline-block;
-                text-align: center;
-                line-height: 18px;
-            }
-            .dot3 {
-                background-color: #7CB06C;
-                height: 18px;
-                width: 18px;
-                border-radius: 50%;
-                display: inline-block;
-                text-align: center;
-                line-height: 18px;
-            }
-            .dot4 {
-                background-color: #00ABA9;
-                height: 18px;
-                width: 18px;
-                border-radius: 50%;
-                display: inline-block;
-                text-align: center;
-                line-height: 18px;
-            }
-
-            .design {
-                width: 300px;
-                height: 300px;
-                line-height: 255px;
-                border-radius: 50%;
-                font-size: 50px;
-                color: #fff;
-                text-align: center;
-                background-color: #E6563B;
-                display: inline-block;
-                border: 20px solid white;
-            }
-            .develop {
-                width: 300px;
-                height: 300px;
-                line-height: 255px;
-                border-radius: 50%;
-                font-size: 50px;
-                color: #fff;
-                text-align: center;
-                background: #DEA03D;
-                display: inline-block;
-                border: 20px solid white;
-            }
-            .support {
-                width: 300px;
-                height: 300px;
-                line-height: 255px;
-                border-radius: 50%;
-                font-size: 50px;
-                color: #fff;
-                text-align: center;
-                background: #7CB06C;
-                display: inline-block;
-                border: 20px solid white;
-            }
-            .host {
-                width: 300px;
-                height: 300px;
-                line-height: 255px;
-                border-radius: 50%;
-                font-size: 50px;
-                color: #fff;
-                text-align: center;
-                background: #00ABA9;
-                display: inline-block;
-                border: 20px solid white;
-            }
-
-            #midgrid {
-                display: inline-block;
-                justify-content: space-around;
-                /*border-color: white;*/
-                /*border: 10px solid white;*/
-
-            }
-
-
-            #selectedwork {
-                display: flex;
-                justify-content: center;
-                /*padding: 50px;*/
-
-            }
-
-            .flex-container1 {
-                display: flex;
-                font-family: Anton;
-                justify-content: space-evenly;
-                font-size: 32px;
-                padding-top: 50px;
-                padding-bottom: 50px;
-            }
-
-
-
-        </style>
+        <link rel="stylesheet" href="css/gridSystemII.css">
     </head>
     <body>
-        <!--    <div class="container">-->
+            <div class="header-top-space1">
+<!--                <p>this is the top space. the logo goes up half way into this space</p>-->
+            </div>
 
-        <div id="toplogo1"><img src="img/logo.png" id="toplogo">
-        </div>
+            <div id="toplogo1"><img src="img/logo.png" id="toplogo"></div>
+
+            <div class="header-middle-space">
+<!--                <p>this is the bottom space. the logo goes up half way in this space</p>&ndash;&gt;-->
+            </div>
+
+            <div class="bottom">
+<!--                <p>this is the middle space that the logo is centered on</p>-->
+            </div>
 
         <!--<div class="midspace"></div>-->
 
         <h1 id="codeupdesign">codeup design</h1>
 
-        <div class="flex-container1">
+        <div class="flex-container">
             <div class="flex-item">SERVICES</div>
             <div class="flex-item">WORK</div>
             <div class="flex-item">BLOG</div>
