--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,9 +5,19 @@
         <title>jQuery Exercises</title>
     </head>
     <body>
+        <h2 .codeup="codeup1">First Element</h2>
+        <h3 .codeup="codeup1">Second Element</h3>
+        <h4 .codeup="codeup1">Third Element</h4>
+
+        <ol>
+            <li>ol list item 1</li>
+            <li>ol list item 1</li>
+            <li>ol list item 1</li>
+        </ol>
+
         <header id="head">
             <h1>jQuery Exercises</h1>
-            <p id="codeup">A page for practicing jQuery!</p>
+            <p id="codeup">jQuery Practice</p>
         </header>
 
         <div>
@@ -21,12 +31,13 @@
             </ul>
         </div>
         <div class="codeup">
-            <h1 id="second-heading">Favorite Games</h1>
+            <h1 id="second-heading">Favorite Sorts</h1>
             <ul>
-                <li>Gotcha Force</li>
-                <li>Persona 4</li>
-                <li>Super Mario Odyssey</li>
-                <li>River City Girls</li>
+                <li>Tennis</li>
+                <li>Sand Volleyball</li>
+                <li>Triathlons</li>
+                <li>Swimming</li>
+                <li>Hiking</li>
             </ul>
         </div>
 
