completed konami assignment

--- a/konami.html
+++ b/konami.html
@@ -8,20 +8,37 @@
 
     <body>
         <h1 class="main-text">Konami Code</h1>
-        <h3>u u l r l r a b</h3>
+        <p>
+            Click somewhere in the output box [here] to ensure focus.<br>
+            Then enter the following code using your keyboard:
+        </p>
+
+<!--        <audio id="pop">-->
+<!--            <source src="audio/pop.wav" type="audio/mpeg">-->
+<!--        </audio>-->
 
 
-        <script>
-            "use strict";
 
-            $(document).keyup(function(event){
-                console.log(event.keyCode);
-            });
-        </script>
+        <p class="code">
+            <span>&uarr;</span>
+            <span>&uarr;</span>
+            <span>&darr;</span>
+            <span>&darr;</span>
+            <span>&larr;</span>
+            <span>&rarr;</span>
+            <span>&larr;</span>
+            <span>&rarr;</span>
+            <span>B</span>
+            <span>A</span>
+        </p>
 
-
+    // My source code came from: https://codepen.io/kmaida/pen/oCkpt
 
         <script src="js/jquery-3.5.1.js"></script>
         <script src="js/konami.js"></script>
     </body>
 </html>
+
+<!--https://codepen.io/kmaida/pen/oCkpt-->
+
+<!--https://medium.com/@ericschwartz7/adding-audio-to-your-app-with-jquery-fa96b99dfa97-->
