initial commit of jQuery faq

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -13,13 +13,35 @@
 
         <dl>
             <dt>Beast of Bodmin</dt>
-            <dd>A large feline inhabiting Bodmin Moor.</dd>
+            <dd class="dd-elemnts">A large feline inhabiting Bodmin Moor.</dd>
 
             <dt>Morgawr</dt>
-            <dd>A sea serpent.</dd>
+            <dd class="dd-elemnts>A sea serpent.</dd>
 
             <dt>Owlman</dt>
-            <dd>A giant owl-like creature.</dd>
+            <dd class="dd-elemnts>A giant owl-like creature.</dd>
+
+            <dt>Beast of Bodmin</dt>
+            <dd class="dd-elemnts">A large feline inhabiting Bodmin Moor.</dd>
+
+            <dt>Morgawr</dt>
+            <dd class="dd-elemnts>A sea serpent.</dd>
+
+            <dt>Owlman</dt>
+            <dd class="dd-elemnts>A giant owl-like creature.</dd>
+
+            <dt>Beast of Bodmin</dt>
+            <dd class="dd-elemnts">A large feline inhabiting Bodmin Moor.</dd>
+
+            <dt>Morgawr</dt>
+            <dd class="dd-elemnts>A sea serpent.</dd>
+
+            <dt>Owlman</dt>
+            <dd class="dd-elemnts>A giant owl-like creature.</dd>
+
+            <dt>Beast of Bodmin</dt>
+            <dd class="dd-elemnts">A large feline inhabiting Bodmin Moor.</dd>
+
         </dl>
 
 
