saving my map work

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -17,7 +17,7 @@
 
 
         <script>
-            var numberToStopAt = 5;
+            // var numberToStopAt = 5;
 
 
                         /**
@@ -45,13 +45,13 @@
                          * use:
                          *
                          * */
-            mapboxgl.accessToken = mapboxToken;
-            var map = new mapboxgl.Map({
-                container: 'mapbox-map',
-                style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
-                center: [-98.49, 29.42],                     // starting position [lng, lat]
-                zoom: 9                                      // default zoom
-            });
+            // mapboxgl.accessToken = mapboxToken;
+            // var map = new mapboxgl.Map({
+            //     container: 'mapbox-map',
+            //     style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
+            //     center: [-98.49, 29.42],                     // starting position [lng, lat]
+            //     zoom: 9                                      // default zoom
+            // });
 
             // Add zoom and rotation controls to the map.
             map.addControl(new mapboxgl.NavigationControl());
